--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,2 @@
-runtime: python
+runtime: custom
 env: flex
-
-runtime_config:
-  python_version: 3
-
-entrypoint: streamlit run mnist_app.py --server.port $PORT
-
-automatic_scaling:
-  max_num_instances: 1
-
-# Or manual scaling as below:
-# manual_scaling:
-#   instances: 1
